--- a/components/sophon/loading/loading.module.css
+++ b/components/sophon/loading/loading.module.css
@@ -52,7 +52,7 @@
 .honeycomb div {
   -webkit-animation: honeycomb 2.1s infinite backwards;
   animation: honeycomb 2.1s infinite backwards;
-  background: #273444;
+  background: #FFFFFF;
   height: 12px;
   margin-top: 6px;
   position: absolute;
@@ -70,12 +70,12 @@
 
 .honeycomb div:after {
   top: -6px;
-  border-bottom: 6px solid #273444;
+  border-bottom: 6px solid #FFFFFF;
 }
 
 .honeycomb div:before {
   bottom: -6px;
-  border-top: 6px solid #273444;
+  border-top: 6px solid #FFFFFF;
 }
 
 .honeycomb div:nth-child(1) {
